# sonar-rust

./: Cargo.toml  README.md  sonar.xml
.github/workflows/: develop.yml
src/: lib.rs  main.rs
